--- a/css/master_rtl.css
+++ b/css/master_rtl.css
@@ -175,7 +175,25 @@ ul {
 }
 
 .img_card {
+  position: relative;
   width: 50% !important;
+}
+
+.img_card label {
+  position: absolute;
+  width: fit-content;
+  height: 23px;
+  margin: 10px 65% 0 0;
+  padding: 2px 12px 5px;
+  border-radius: 13px;
+  font-family: Cairo;
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: #2dce00;
+  background: #e3ffdb;
 }
 
 .img_card img {
@@ -416,22 +434,20 @@ ul {
   padding: 15px;
   margin: 30px auto;
   border-radius: 40px;
-  gap: 8px;
-  background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
-  box-shadow: 0px 2px 5px 0px #2b1f8d1a;
-  box-shadow: 0px 0px 0px 1px #4133ab;
-  box-shadow: 0px 1px 1px 0px #00000024;
-  box-shadow: 0px 1px 0px 0px #7563ff inset;
-}
-
-.Add_auction .Add a {
+  border: none;
+  outline: none;
   font-family: Cairo;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0em;
-  text-align: left;
+  text-align: center;
   color: #ffffff;
+  box-shadow: 0px 2px 5px 0px #2b1f8d1a;
+  box-shadow: 0px 0px 0px 1px #4133ab;
+  box-shadow: 0px 1px 1px 0px #00000024;
+  box-shadow: 0px 1px 0px 0px #7563ff inset;
+  background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
 }
 
 /***********************************************************/
@@ -553,13 +569,15 @@ ul {
   box-shadow: 0px 1px 0px 0px #7563ff inset;
 }
 
-.request_auction .request a {
+.request_auction .request {
   font-family: Cairo;
+  outline: none;
+  border: none;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0em;
-  text-align: left;
+  text-align: center;
   color: #ffffff;
 }
 
@@ -570,24 +588,21 @@ ul {
 /**************** Start Waiting_auction Page *****************/
 /***********************************************************/
 
-.Waiting_auction .Waiting {
+.Waiting_auction .Waiting button {
   width: 398px;
   height: Fixed (60px);
   padding: 15px;
   margin: 30px auto;
   border-radius: 10px;
-  gap: 8px;
-  background: #f1f5f9;
-  box-shadow: 0px 2px 5px 0px #f1f5f9;
-}
-
-.Waiting_auction .Waiting a {
   font-family: Cairo;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0em;
-  color: #8d9498;
+  outline: none;
+  border: none;
+  color: #8d9498;  background: #f1f5f9;
+  box-shadow: 0px 2px 5px 0px #f1f5f9;
 }
 
 /***********************************************************/
@@ -635,28 +650,25 @@ ul {
   background: #f1f5f9;
 }
 
-.entrance {
+.entrance button {
   width: 398px;
-  height: Fixed (60px);
+  height: 60px;
   padding: 15px;
   margin: 30px auto;
+  border: none;
+  outline: none;
   border-radius: 10px;
-  gap: 8px;
-  background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
-  box-shadow: 0px 2px 5px 0px #2b1f8d1a;
-  box-shadow: 0px 0px 0px 1px #4133ab;
-  box-shadow: 0px 1px 1px 0px #00000024;
-  box-shadow: 0px 1px 0px 0px #7563ff inset;
-}
-
-.entrance a,
-.entrance a:hover {
   font-family: Cairo;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0em;
   color: #ffffff;
+  box-shadow: 0px 2px 5px 0px #2b1f8d1a;
+  box-shadow: 0px 0px 0px 1px #4133ab;
+  box-shadow: 0px 1px 1px 0px #00000024;
+  box-shadow: 0px 1px 0px 0px #7563ff inset;
+  background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
 }
 
 /***********************************************************/
@@ -926,7 +938,9 @@ ul {
   color: #36474f;
 }
 
-.payment_bay {
+.payment_bay button {
+  outline: none;
+  border: none;
   padding: 15px;
   margin: 30px auto;
   width: 95%;
@@ -937,7 +951,7 @@ ul {
   background: #000000;
 }
 
-.payment_bay a span {
+.payment_bay button span {
   font-family: Cairo;
   font-size: 14px;
   font-weight: 500;
@@ -947,11 +961,13 @@ ul {
   color: #ffffff;
 }
 
-.payment_bay a img {
+.payment_bay button img {
   margin: 0 5px;
 }
 
-.payment_visa {
+.payment_visa button {
+  outline: none;
+  border: none;
   padding: 15px 22px;
   margin: 30px auto;
   width: 95%;
@@ -962,7 +978,7 @@ ul {
   border: 1px solid #4133ab;
 }
 
-.payment_visa a span {
+.payment_visa button span {
   font-family: Cairo;
   font-size: 14px;
   font-weight: 500;
@@ -972,11 +988,13 @@ ul {
   color: #36474f;
 }
 
-.payment_bay a img {
+.payment_bay button img {
   margin: 0 5px;
 }
 
-.payment_mdy {
+.payment_mdy button {
+  outline: none;
+  border: none;
   padding: 15px 22px;
   margin: 30px auto;
   width: 95%;
@@ -986,7 +1004,7 @@ ul {
   background: #f1f5f9;
 }
 
-.payment_mdy a span {
+.payment_mdy button span {
   font-family: Cairo;
   font-size: 14px;
   font-weight: 500;
@@ -996,35 +1014,31 @@ ul {
   color: #36474f;
 }
 
-.payment_mdy a img {
+.payment_mdy button img {
   margin: 0 5px;
 }
 
-.payment {
+.payment button {
   width: 250px;
   height: 60px;
   margin: 50px auto;
   padding: 15px;
   border-radius: 40px;
-  gap: 8px;
-  background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
-  box-shadow: 0px 2px 5px 0px #2b1f8d1a;
-  box-shadow: 0px 0px 0px 1px #4133ab;
-  box-shadow: 0px 1px 1px 0px #00000024;
-  box-shadow: 0px 1px 0px 0px #7563ff inset;
-}
-
-.payment a,
-.payment a:hover {
   font-family: Cairo;
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0em;
   padding: 20px 70px;
+  outline: none;
+  border: none;
   color: #ffffff;
+  box-shadow: 0px 2px 5px 0px #2b1f8d1a;
+  box-shadow: 0px 0px 0px 1px #4133ab;
+  box-shadow: 0px 1px 1px 0px #00000024;
+  box-shadow: 0px 1px 0px 0px #7563ff inset;
+  background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
 }
-
 /***********************************************************/
 /******************** End Fee amount Page ******************/
 /***********************************************************/
@@ -1152,29 +1166,26 @@ ul {
   padding-top: 5px;
 }
 
-.owner_contact_request {
+.owner_contact_request button {
   width: 100%;
   height: Fixed (60px);
   margin: 44px auto 10px;
   padding: 20px;
   border-radius: 12px;
-  gap: 8px;
-  background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
-  box-shadow: 0px 2px 5px 0px #2b1f8d1a;
-  box-shadow: 0px 0px 0px 1px #4133ab;
-  box-shadow: 0px 1px 1px 0px #00000024;
-  box-shadow: 0px 1px 0px 0px #7563ff inset;
-}
-
-.owner_contact_request a,
-.owner_contact_request a:hover {
   font-family: Cairo;
+  outline: none;
+  border: none;
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0em;
   padding: 20px 70px;
   color: #ffffff;
+  box-shadow: 0px 2px 5px 0px #2b1f8d1a;
+  box-shadow: 0px 0px 0px 1px #4133ab;
+  box-shadow: 0px 1px 1px 0px #00000024;
+  box-shadow: 0px 1px 0px 0px #7563ff inset;
+  background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
 }
 
 .wait_owner {
@@ -1287,17 +1298,26 @@ ul {
   color: #15113b;
 }
 
-.Welcome .list {
+.Welcome .open_finished {
   display: flex;
   text-align: center;
   justify-content: space-between;
   margin: 15px auto;
 }
 
-.Welcome .list .open {
+.Welcome .open_finished .open {
+  font-family: Cairo;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #ffffff;
   width: 190px;
   height: 50px;
   padding: 10px;
+  outline: none;
+  border: none;
   border-radius: 40px;
   box-shadow: 0px 2px 5px 0px #2b1f8d1a;
   box-shadow: 0px 0px 0px 1px #4133ab;
@@ -1306,32 +1326,21 @@ ul {
   background: linear-gradient(180deg, #5648c7 0%, #3f32a4 100%);
 }
 
-.Welcome .list .open a {
-  font-family: Cairo;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 20px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #ffffff;
-}
-
-.Welcome .list .finished {
+.Welcome .open_finished .finished {
   width: 190px;
   height: 50px;
   padding: 10px;
-  border-radius: 40px;
-  background: #f1f5f9;
-}
-
-.Welcome .list .finished a {
   font-family: Cairo;
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
   letter-spacing: 0em;
-  text-align: left;
+  text-align: center;
+  outline: none;
+  border: none;
   color: #36474f;
+  border-radius: 40px;
+  background: #f1f5f9;
 }
 
 /***********************************************************/
